--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
   </footer>
 
-  <script src="Javascript/index.js" charset="utf-8"></script>
+  <script src="Javascript/Javascript/index.js" charset="utf-8"></script>
 
 </body>
 
