--- a/discord.html
+++ b/discord.html
@@ -162,7 +162,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="Javascript/Javascript/discord.js" charset="utf-8"></script>
+    <script src="Javascript/discord.js" charset="utf-8"></script>
 
   </body>
 </html>
