--- a/discord.html
+++ b/discord.html
@@ -127,7 +127,7 @@
         </ol>
         <div class="carousel-inner jsCarousel">
           <div class="carousel-item active container-fluid">
-            <h2 class="testimonial-text"><img src="https://cdn.discordapp.com/attachments/760669182139301968/762868669629595679/image0.jpg"></h2>
+            <img src="https://cdn.discordapp.com/attachments/760669182139301968/762868669629595679/image0.jpg">
             <img class="testimonial-image" src="" alt="">
             <em>Saka</em>
           </div>
