--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
     <div class="container-fluid">
 
-      <h2 class="big-heading">Tell us What You Think!</h2>
+      <h2 class="big-heading">Share Us Your Experience</h2>
       <div class="left-align review-adjust">
 
 
