--- a/me.html
+++ b/me.html
@@ -44,6 +44,66 @@
         visibility: hidden;
       }
 
+      .glow-on-hover {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+
     </style>
 
   </head>
@@ -150,8 +210,8 @@
 
 <!-- js added content -->
 
-    <section class="colored-section  ">
-      <div class="container-fluid jsAddedContentAboutMe">
+    <section class="" id="jsSectionAddContentAdjust">
+      <div class="container-fluid jsAddedContentAboutMe jsAddedContentAboutMeAdjust">
         <div class="added-content addedContentHobbies">
           <h3 class="section-heading">Some of My Hobbies Are...</h3>
           <h6 class="left-align" style="font-size:2rem; padding-top:50px;">Speed Cubing</h6>
@@ -201,10 +261,10 @@
           </h6>
 
         </div>
-      </div>
+     </div>
     </section>
 
-    <button type="button" name="button" id="jsPasswordCheck">Premium Discord Users(Specified people)</button>
+    <button type="button" name="button" id="jsPasswordCheck" class="btn btn-lg btn-outline-dark glow-on-hover" style="width: 500px;">Premium Discord Users (Specified people)</button>
 
     <footer id="footer" class="white-section">
 
