--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <li class="navbar-item">
           <div class="center-wrapper" style="height:90%">
             <select class="navbar-links" name="" onchange="window.document.location.href = this.options[this.selectedIndex].value;">
-              <option value="">Version.2.0</option>
-              <option value="https://legendary-ui.github.io/cv/">Version.1.0</option>
+              <option value="https://legendary-ui.github.io/cv/">Version.2.0</option>
+              <option value="https://legendary-ui.github.io/cv/index-version-2.html">Version.1.0</option>
             </select>
           </div>
         </li>
