--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </a>
           </div>
 
-          <p class="website__rights">©Apex 2020 & Evnotion 2021. All rights reserved</p>
+          <p class="website__rights">©Apex 2021. All rights reserved</p>
 
           <div class="social__icons">
             <a href="/" class="social__icon--link" target="_blank">
