--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Apex Ultima</title>
+  <meta name="description" content="Apex is a Fake Company made by a Student called M.Mohamed Murshid. Apex is a Company that lets You to Make Your own Website. With Apex Ultima being the next version, you can hire programmers for cheap to make your websites too! Read the website for more!">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
