--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   
   <!-- favicon -->
-  <link rel="icon" href="favicon/myFavicon.ico">
+  <!-- <link rel="icon" href="favicon/myFavicon.ico"> -->
 
   <!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
