--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <nav class="navbar">
     <div class="navbar-container">
 
-      <a href="https://legendary-ui.github.io/cv/index.html" id="navbar-logo">Apex</a>
+      <a href="https://legendary-ui.github.io/cv/index.html" id="">Apex Ultima</a>
 
       <div class="navbar-toggle" id="mobile-menu">
         <span class="bar"></span>
