--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>Apex Ultima</title>
-  <meta name="description" content="Apex is a Fake Company made by a Student called M.Mohamed Murshid. Apex is a Company that lets You to Make Your own Website. With Apex Ultima being the next version, you can hire programmers for cheap to make your websites too! Read the website for more!">
+  <meta name="description"
+    content="Apex is a Fake Company made by a Student called M.Mohamed Murshid. Apex is a Company that lets You to Make Your own Website. With Apex Ultima being the next version, you can hire programmers for cheap to make your websites too! Read the website for more!">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
 
   <!-- CSS Stylesheets -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
   <!-- Bootstrap Scripts -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -29,62 +28,58 @@
 
   <span class="overlay target"></span>
 
-  <nav class="navbar">
-    <div class="navbar-container">
-
-      <a href="https://legendary-ui.github.io/cv/index.html" id="navbar-logo">Apex Ultima</a>
-
-      <div class="navbar-toggle" id="mobile-menu">
+  <nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Apex Ultima</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#title">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#pricing">Pricing</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Version
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" target="_blank" href="https://legendary-ui.github.io/cv/index.html">Version.2.0</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" target="_blank" href="https://legendary-ui.github.io/cv/index-version-2.html">Version.1.0</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://legendary-ui.github.io/cv/index-version-3.html"
+                  onclick="alert('This website is very old, so to view this you have to go to /master/index-version-3.html to see this.')">Version.0.4</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#footer">Contact</a>
+          </li>
+        </ul>
       </div>
-
-      <ul class="navbar-menu">
-        <li class="navbar-item">
-          <a href="#about" class="navbar-links">About</a>
-        </li>
-        <li class="navbar-item">
-          <a href="#pricing" class="navbar-links">Pricing</a>
-        </li>
-        <li class="navbar-item">
-          <a target="_blank" href="https://legendary-ui.github.io/cv/me.html" class="navbar-links">Founder</a>
-        </li>
-        <li class="navbar-item">
-          <a href="https://legendary-ui.github.io/cv/index-version-2.html" class="navbar-links">Version.2.0</a>
-          <!-- <div class="center-wrapper" style="height:90%">
-            <select class="navbar-links" name="" onchange="window.document.location.href = this.options[this.selectedIndex].value;">
-              <option value="">Version.2.0</option>
-              <option value="https://legendary-ui.github.io/cv/">Version.1.0</option>
-            </select>
-          </div> -->
-        </li>
-        <li class="navbar-btn"><a class="button btn btn-outline-primary btn-lg" href="#footer">Contact</a></li>
-      </ul>
-
     </div>
   </nav>
 
   <section id="title">
-    <div class="main">
-      <div class="main-container">
+    <div class="main-container">
+      <div class="main-content">
+        <h1 class="big-heading">Get your own personalized and proffesionally built website.</h1>
+        <input class="neon-switch" type="checkbox" name="" value="">
+      </div>
 
-        <div class="main-content">
-          <h1>Get your own personalized and proffesionally built website.</h1>
-          <!-- <button class="main-btn" href="#pricing"><a href="#pricing">Performance Mode</a></button> -->
-          <input class="neon-switch" type="checkbox" name="" value="">
-        </div>
-
-        <div id="carousal">
-          <ul id="content">
-            <li class="list-carousal" style="background-image: url(images/bootstrap_apex.PNG); background-size: 500px;"></li>
-            <li class="list-carousal" style="background-image: url(images/JCC_website.PNG); background-size: 500px;"></li>
-            <li class="list-carousal" style="background-image: url(images/evnotion.PNG); background-size: 500px;"></li>
-            <li class="list-carousal" style="background-image: url(images/bootstrap_murshid.PNG); background-size: 500px;"></li>
-            <li class="list-carousal" style="background-image: url(images/bootstrap_discord.PNG); background-size: 500px;"></li>
-          </ul>
-        </div>
-
+      <div class="templates">
+        <img class="template-image" src="images/JCC_website.PNG">
+        <img class="template-image" src="images/evnotion.PNG">
+        <img class="template-image" src="images/bootstrap_apex.png">
       </div>
     </div>
   </section>
@@ -127,10 +122,8 @@
           <img src="images//business.svg" alt="pic" id="main-img">
         </div>
         <div class="main-content" style="padding-left: 65px;">
-          <h1>About Us</h1>
-          <p>Apex <i>Ultima</i> - THE IDEA:
-            <br>
-            9th Graders with High Dreams of becoming FullStack Programmers in the near Future. </p>
+          <h1 class="big-heading">About Us</h1>
+          <p>Apex Ultima, 9th Graders with High Dreams of becoming FullStack Programmers in the near Future. </p>
         </div>
       </div>
     </div>
@@ -157,13 +150,13 @@
 
       <div class="skill-box-button col col-lg-3">
         <div class="skill-box">
-          <input class="description-btn sql neon-switch" type="radio" name="skill-button" onclick="getSkillDiv(getSecondPart(this.getAttribute('class')))">
+          <input class="description-btn html neon-switch" type="radio" name="skill-button" onclick="getSkillDiv(getSecondPart(this.getAttribute('class')))">
         </div>
         <div class="skill-box">
-          <input class="description-btn python neon-switch" type="radio" name="skill-button" onclick="getSkillDiv(getSecondPart(this.getAttribute('class')))">
+          <input class="description-btn css neon-switch" type="radio" name="skill-button" onclick="getSkillDiv(getSecondPart(this.getAttribute('class')))">
         </div>
         <div class="skill-box">
-          <input class="description-btn java neon-switch" type="radio" name="skill-button" onclick="getSkillDiv(getSecondPart(this.getAttribute('class')))">
+          <input class="description-btn javascript neon-switch" type="radio" name="skill-button" onclick="getSkillDiv(getSecondPart(this.getAttribute('class')))">
         </div>
       </div>
 
@@ -295,11 +288,25 @@
 
       <div class="quick-view-content">
         <h1>Starters</h1>
-        <h3>Free</h3>
-        <p>5 Options Per Website</p>
-        <p>10 Messages Per Day</p>
-        <p>Gaurenteed to Finish Before 4 Months </p>
-        <p><strong><em>Please note that this is a one time deal!</em></strong></p>
+
+        <div class="row">
+          <div class="col col-lg-6 col-md-12 col-sm-12">
+            <h3>Free</h3>
+            <p>5 Options Per Website</p>
+            <p>10 Messages Per Day</p>
+            <p>Gaurenteed to Finish Before 4 Months </p>
+            <p><strong><em>Please note that this is a one time deal!</em></strong></p>
+          </div>
+
+          <div class="col col-lg-6 col-md-12 col-sm-12">
+            <h3>Free</h3>
+            <p>5 Options Per Website</p>
+            <p>10 Messages Per Day</p>
+            <p>Gaurenteed to Finish Before 4 Months </p>
+            <p><strong><em>Please note that this is a one time deal!</em></strong></p>
+          </div>
+        </div>
+
         <div class="gradient-wrapper">
           <input type="button" value="Purchase" class="purchase starters purchase-button btn" onclick="">
         </div>
@@ -311,17 +318,30 @@
     <div class="quick-view advanced" hidden>
       <div class="quick-view-content">
         <h1>Advanced</h1>
-        <p>Buy your delicious mangoes right now</p>
-        <input type="button" value="Exit" class="toggle-quick-view advanced" onclick="sortQuickView(getSecondPart(this.getAttribute('class')));">
+        <h2>$15 / Website</h2>
+        <p>10 Options Per Website</p>
+        <p>Unlimited Messages</p>
+        <p>Gaurenteed to Finish Before 2 Months</p>
+        <div class="gradient-wrapper">
+          <input type="button" value="Purchase" class="purchase advanced purchase-button btn" onclick="">
+        </div>
       </div>
+      <input type="button" value="Exit" class="toggle-quick-view advanced" onclick="sortQuickView(getSecondPart(this.getAttribute('class')));">
     </div>
 
     <div class="quick-view pro" hidden>
       <div class="quick-view-content">
         <h1>Pro</h1>
-        <p>Buy your delicious mangoes right now</p>
-        <input type="button" value="Exit" class="toggle-quick-view pro" onclick="sortQuickView(getSecondPart(this.getAttribute('class')));">
+        <h2>$20 / Website</h2>
+        <p>Pirority Listing</p>
+        <p>Unlimited Options</p>
+        <p>Unlimited Messages</p>
+        <p>Gaurenteed to Finish Before 1 Month!</p>
+        <div class="gradient-wrapper">
+          <input type="button" value="Purchase" class="purchase pro purchase-button btn" onclick="">
+        </div>
       </div>
+      <input type="button" value="Exit" class="toggle-quick-view pro" onclick="sortQuickView(getSecondPart(this.getAttribute('class')));">
     </div>
 
     <div class="quick-view review" hidden>
@@ -334,7 +354,7 @@
         </div>
 
         <div class="review-wrapper" style="margin:auto;">
-          <form class="" id="jsReviewForm" name="jsReviewForm" onsubmit="mailto:murshidazmal@gmail.com">
+          <form class="" id="jsReviewForm" name="jsReviewForm" onsubmit="mailto:murshidazmal@gmail.com" method="post" enctype="text/plain">
             <div class="block review-input">
               <p class="inline">Your Name : </p><input type="text" class="jsReviewName review-text-adjust">
             </div>
@@ -349,6 +369,7 @@
             <div class="block review-input">
               <p class="inline">Your Review: </p><textarea name="name" class="jsReview" rows="3" cols="45"></textarea>
             </div>
+            <p><em>Or You Can Just Mail to murshidazmal@gmail.com directly.</em></p>
             <input type="submit" class="btn btn-lg btn-outline-primary jsSubmitReview" value="Submit Review">
           </form>
         </div>
@@ -368,11 +389,11 @@
       <h2 class="big-heading">See our Customers' Reviews!</h2>
     </div>
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleControls" data-slide-to="1" class=""></li>
-      </ol>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      </div>
 
       <div class="carousel-inner jsCarousel">
         <div class="carousel-item container-fluid active">
@@ -387,14 +408,14 @@
         </div>
       </div>
 
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </section>
 
@@ -408,22 +429,22 @@
       <div class="social__media">
         <div class="social__media--wrap">
           <div class="footer__logo">
-            <a href="/" id="footer-logo">
+            <a href="#" id="footer-logo">
               <i class="fa fa-code" aria-hidden="true"></i>
               Apex
             </a>
           </div>
 
-          <p class="website__rights">©Apex 2020 & Evnotion 2021. All rights reserved</p>
+          <p class="website__rights">©Apex 2021. All rights reserved</p>
 
           <div class="social__icons">
-            <a href="/" class="social__icon--link" target="_blank">
+            <a href="#" class="social__icon--link" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="/" class="social__icon--link" target="_blank">
+            <a href="#" class="social__icon--link" target="_blank">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="/" class="social__icon--link" target="_blank">
+            <a href="#" class="social__icon--link" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
           </div>
