--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="templates">
         <img class="template-image" src="images/JCC_website.PNG">
         <img class="template-image" src="images/evnotion.PNG">
-        <img class="template-image" src="images/bootstrap_apex.png">
+        <img class="template-image" src="images/bootstrap_apex.PNG">
       </div>
     </div>
   </section>
