--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
       <p>Simple and affordable price plans for you.</p>
     </div>
 
-    <div class="card-deck">
-      <div class="price-card">
+    <div class="card-deck row">
+      <div class="price-card col col-lg-4 col-md-6 col-sm-12">
         <span></span>
         <div class="card-content">
           <h1>Starter</h1>
@@ -254,7 +254,7 @@
         </div>
       </div>
 
-      <div class="price-card">
+      <div class="price-card col col-lg-4 col-md-6 col-sm-12">
         <span></span>
         <div class="card-content">
           <h1>Advanced</h1>
@@ -266,7 +266,7 @@
         </div>
       </div>
 
-      <div class="price-card">
+      <div class="price-card col col-lg-4 col-md-12 col-sm-12">
         <span></span>
         <div class="card-content">
           <h1>Pro</h1>
