--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
+  <!-- favicon -->
+  <link rel="icon" href="favicon/light_ultima_favicon.ico">
 </head>
 
 <body>
